# az-helloworld-cpp

./: CMakeLists.txt  LICENSE  main.cpp  vcpkg.json
